fixed transition in customers section, mobile, modal and newsletter (flex-wrap), link-underline in menu and margin top in field section

--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -9,6 +9,7 @@
         }
     }
     &__item {
+        width: 100%;
         max-width: 450px;
         @include tablet {
             max-width: 354px;
@@ -26,13 +27,14 @@
         align-items: center;
         padding: 25px 0;
 
-        width: 450px;
+        width: 100%;
+        max-width: 450px;
         @include tablet {
-            width: 354px;
+            max-width: 354px;
         }
 
         @include desktop {
-            width: 270px;
+            max-width: 270px;
         }
     }
     &__title {
