--- a/sass/components/_field.scss
+++ b/sass/components/_field.scss
@@ -1,5 +1,6 @@
 .field {
     &__headline {
+        margin-top: -94px;
         font-weight: 700;
         font-size: 36px;
         line-height: 1.17;
