--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -34,11 +34,12 @@
     &::after {
         content: '';
         position: absolute;
+        top: 44px;
         width: 100%;
         height: 4px;
         background: #2196f3;
         border-radius: 2px;
-        margin-top: 28px;
+
         display: block;
     }
 }
