--- a/sass/components/_mobile.scss
+++ b/sass/components/_mobile.scss
@@ -92,6 +92,7 @@
     }
     &__socials {
         display: flex;
+        flex-wrap: wrap;
         margin-top: 32px;
         gap: 10px;
     }
