--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -24,11 +24,12 @@
 }
 
 .modal {
-    width: 450px;
+    width: 100%;
+    max-width: 450px;
     min-height: 609px;
 
     @include desktop {
-        width: 528px;
+        max-width: 528px;
         min-height: 581px;
     }
 
